--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,3 @@
-
 {
   "compilerOptions": {
     // Target latest browsers
@@ -11,15 +10,19 @@
     // Required for some packages.
     "moduleResolution": "Node",
 
-     // `import React` instead of `import * as React`
+    // `import React` instead of `import * as React`
     "allowSyntheticDefaultImports": true,
 
-   // <div /> => React.createElement("div")
+    // <div /> => React.createElement("div")
     "jsx": "react",
 
     // Only for type checks.
     "incremental": true,
     "outDir": "./.ts-cache/",
+
+    // cf. https://github.com/DefinitelyTyped/DefinitelyTyped/issues/33311
+    // cf. https://stackoverflow.com/a/55540896
+    "skipLibCheck": true,
 
     // Useful type checks.
     "strictNullChecks": true
