--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,8 @@
   // See https://go.microsoft.com/fwlink/?LinkId=827846 to learn about workspace recommendations.
   "recommendations": [
     // Prettier をフォーマッターとして使う
-    "esbenp.prettier-vscode"
+    "esbenp.prettier-vscode",
+    // ESLint の警告をリアルタイムで表示する
+    "dbaeumer.vscode-eslint"
   ]
 }
